[package]
name = "img-tools"
version = "0.1.0"
authors = ["Francis Chua <francischua689@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
js-sys="0.3.51"
console_error_panic_hook = "0.1.6"
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'BinaryType',
  'CanvasRenderingContext2d',
  'console',
]

[profile.release]
debug = true